--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>api-client-redux</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Code+Pro:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="icon" href="/public/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest">
+  <title>API Client</title>
 </head>
 
 <body>
